--- a/.coveragerc
+++ b/.coveragerc
@@ -1,3 +1,9 @@
 [run]
 branch = True
 source = discussion_grading
+omit =
+    *admin.py
+    */public/*
+    */tests/*
+    */settings/*
+    */edxapp_wrapper/*
